[JBTM-1166] remove dependency on the AS6 dependency matrix