@@ -31,28 +31,8 @@
     <version.org.jboss.resteasy>2.0.0.GA</version.org.jboss.resteasy>
     <version.artifactId>5.0.0.M2-SNAPSHOT</version.artifactId>
     <artifactId.name>rest-tx</artifactId.name>
-    <version.org.jboss.jbossas>6.0.0.20100721-M4</version.org.jboss.jbossas>
   </properties>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.jboss.jbossas</groupId>
-        <artifactId>jboss-as-component-matrix</artifactId>
-        <version>${version.org.jboss.jbossas}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <dependencies>
-    <!--
-		<dependency>
-			<groupId>org.jboss.jbossas</groupId>
-			<artifactId>jboss-as-depchain</artifactId>
-			<version>${version.org.jboss.jbossas}</version>
-			<type>pom</type>
-		</dependency>
-		-->
     <dependency>
       <groupId>org.jboss.narayana.rts</groupId>
       <artifactId>rest-tx-api</artifactId>
@@ -88,16 +68,6 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-jaxrs</artifactId>
       <version>${version.org.jboss.resteasy}</version>
@@ -121,6 +91,19 @@
       <version>2.5</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+        <groupId>org.jboss.arquillian.junit</groupId>
+        <artifactId>arquillian-junit-container</artifactId>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.jboss.arquillian.protocol</groupId>
+        <artifactId>arquillian-protocol-servlet</artifactId>
+        <scope>test</scope>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
@@ -170,55 +153,17 @@
           </archive>
         </configuration>
       </plugin>
+      <!-- The JBoss AS plugin deploys your war to a local JBoss
+          AS container -->
+      <!-- To use, run: mvn package jboss-as:deploy -->
+      <plugin>
+          <groupId>org.jboss.as.plugins</groupId>
+          <artifactId>jboss-as-maven-plugin</artifactId>
+          <version>7.1.1.Final</version>
+      </plugin>
     </plugins>
   </build>
   <profiles>
-    <profile>
-      <id>bust</id>
-      <!-- eventually starts but fails because it can't get a JMX connection
-			     so the stop goal isn't executed leaving the server running
-			     -->
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>jboss-maven-plugin</artifactId>
-            <version>1.4.1</version>
-            <executions>
-              <execution>
-                <id>start-container</id>
-                <phase>pre-integration-test</phase>
-                <goals>
-                  <goal>configure</goal>
-                  <goal>startAndWait</goal>
-                  <goal>deploy</goal>
-                </goals>
-              </execution>
-              <execution>
-                <id>stop-container</id>
-                <phase>post-integration-test</phase>
-                <goals>
-                  <goal>undeploy</goal>
-                  <goal>stop</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <!--
-						<jbossHome>${project.build.directory}/jboss-${version.org.jboss.jbossas}</jbossHome>
-						-->
-              <jbossHome>${env.JBOSS_HOME}</jbossHome>
-              <fileName>${basedir}/target/${artifactId.name}-web-${version.artifactId}.war</fileName>
-              <serverName>default</serverName>
-              <port>8080</port>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     <profile>
       <id>remote</id>
       <activation>
@@ -289,88 +234,36 @@
         </plugins>
       </build>
     </profile>
-    <profile>
-      <id>embedded</id>
-      <activation>
-        <!-- TODO cant get this profile to work either - needs more investigation -->
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>integration-test</id>
-                <phase>integration-test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration>
-                  <systemProperties>
-                    <property>
-                      <name>resttx.war</name>
-                      <value>${basedir}/target/${artifactId.name}-web-${version.artifactId}.war</value>
-                    </property>
-                  </systemProperties>
-                  <environmentVariables>
-                    <resttx.war>${basedir}/target/${artifactId.name}-web-${version.artifactId}.war</resttx.war>
-                  </environmentVariables>
-                  <additionalClasspathElements>
-                    <additionalClasspathElement>${JBOSS_HOME}/client/jbossws-native-client.jar</additionalClasspathElement>
-                    <!--
-                                        Because jbossweb.sar contains shared web.xml,
-                                        which must be visible from same CL as
-                                        TomcatDeployer.class.getClassLoader
-                                        -->
-                    <additionalClasspathElement>${JBOSS_HOME}/server/default/deploy/jbossweb.sar</additionalClasspathElement>
-                  </additionalClasspathElements>
-                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                  <trimStackTrace>false</trimStackTrace>
-                  <printSummary>true</printSummary>
-                  <includes>
-                    <include>**/*IntegrationTest.java</include>
-                  </includes>
-                  <forkMode>always</forkMode>
-                  <!--
-                                     MaxPermSize Required to bump the space for relective
-                                     data like classes, methods, etc. EMB-41. Endorsed
-                                     required for things like WS support (EMB-61)
-                                     -->
-                  <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djava.endorsed.dirs=${JBOSS_HOME}/lib/endorsed -Djboss.home=${JBOSS_HOME} -Djboss.boot.server.log.dir=${JBOSS_HOME}</argLine>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-          <!-- Get AS and put into "target" -->
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>unpack</id>
-                <phase>pre-integration-test</phase>
-                <!-- So run before testing -->
-                <goals>
-                  <goal>unpack</goal>
-                </goals>
-                <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>org.jboss.jbossas</groupId>
-                      <artifactId>jboss-as-distribution</artifactId>
-                      <version>${version.org.jboss.jbossas}</version>
-                      <type>zip</type>
-                      <overWrite>false</overWrite>
-                      <outputDirectory>${project.build.directory}</outputDirectory>
-                    </artifactItem>
-                  </artifactItems>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
+        <profile>
+            <!-- An optional Arquillian testing profile that executes tests
+                in your JBoss AS instance -->
+            <!-- This profile will start a new JBoss AS instance, and execute
+                the test, shutting it down when done -->
+            <!-- Run with: mvn clean test -Parq-jbossas-managed -->
+            <id>arq-jbossas-managed</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <version>7.2.0.Alpha1-SNAPSHOT</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <!-- An optional Arquillian testing profile that executes tests
+                in a remote JBoss AS instance -->
+            <!-- Run with: mvn clean test -Parq-jbossas-remote -->
+            <id>arq-jbossas-remote</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.jboss.as</groupId>
+                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <version>7.2.0.Alpha1-SNAPSHOT</version>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+
   </profiles>
 </project>
